Some Final adjustments

--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -11,5 +11,5 @@
 
   "itemGroup.coursemodtab": "MCCourse Mod",
 
-  "item.mccourse.dowsing_rod.no_valuables": "No Valuables Found!"
+  "item.mccourse.dowsing_rod.no_valuable": "No Valuables Found!"
 }
