--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -8,6 +8,7 @@
   "block.mccourse.raw_cobalt_block": "Raw Cobalt Block",
   "block.mccourse.cobalt_ore": "Cobalt Ore",
   "block.mccourse.deepslate_cobalt_ore": "Deepslate Cobalt Ore",
+  "block.mccourse.speedy_block": "Speedy Block",
 
   "itemGroup.coursemodtab": "MCCourse Mod",
 
