--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -14,5 +14,8 @@
 
   "itemGroup.coursemodtab": "MCCourse Mod",
 
-  "item.mccourse.dowsing_rod.no_valuable": "No Valuables Found!"
+  "item.mccourse.dowsing_rod.no_valuable": "No Valuables Found!",
+  "tooltip.mccourse.dowsing_rod.tooltip.shift": "Right Click to find Valuables!",
+  "tooltip.mccourse.dowsing_rod.tooltip": "Press §eSHIFT§r for more Information!",
+  "tooltip.block.speedy_block": "It gets REALLY speedy!"
 }
