--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -15,6 +15,7 @@
   "item.mccourse.cobalt_chestplate": "Cobalt Chestplate",
   "item.mccourse.cobalt_leggings": "Cobalt Leggings",
   "item.mccourse.cobalt_boots": "Cobalt Boots",
+  "item.mccourse.cobalt_horse_armor": "Cobalt Horse Armor",
 
   "block.mccourse.cobalt_block": "Cobalt Block",
   "block.mccourse.raw_cobalt_block": "Raw Cobalt Block",
