--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -16,6 +16,7 @@
   "item.mccourse.cobalt_leggings": "Cobalt Leggings",
   "item.mccourse.cobalt_boots": "Cobalt Boots",
   "item.mccourse.cobalt_horse_armor": "Cobalt Horse Armor",
+  "item.mccourse.data_tablet": "Data Tablet",
 
   "block.mccourse.cobalt_block": "Cobalt Block",
   "block.mccourse.raw_cobalt_block": "Raw Cobalt Block",
