--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -36,6 +36,7 @@
   "block.mccourse.cobalt_lamp": "Cobalt Lamp",
   "block.mccourse.turnip_crop": "Turnip Crop",
   "block.mccourse.pink_rose": "Pink Rose",
+  "block.mccourse.potted_pink_rose": "Potted Pink Rose",
 
   "itemGroup.coursemodtab": "MCCourse Mod",
 
