63. Custom Music Discs

--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -18,6 +18,8 @@
   "item.mccourse.cobalt_horse_armor": "Cobalt Horse Armor",
   "item.mccourse.data_tablet": "Data Tablet",
   "item.mccourse.turnip_seeds": "Turnip Seeds",
+  "item.mccourse.bar_brawl_music_disc": "Bar Brawl Music Disc",
+  "item.mccourse.bar_brawl_music_disc.desc": "Bryan Tech - Bar Brawl (CC0)",
 
   "block.mccourse.cobalt_block": "Cobalt Block",
   "block.mccourse.raw_cobalt_block": "Raw Cobalt Block",
