64. Custom Block Models in Minecraft with BlockBench

--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -39,6 +39,7 @@
   "block.mccourse.turnip_crop": "Turnip Crop",
   "block.mccourse.pink_rose": "Pink Rose",
   "block.mccourse.potted_pink_rose": "Potted Pink Rose",
+  "block.mccourse.potted_pink_rose": "Cobalt Blaster",
 
   "itemGroup.coursemodtab": "MCCourse Mod",
 
